chore(bal-datepicker): fix header width on mobile

--- a/packages/components/src/components/form/bal-datepicker/bal-datepicker.sass
+++ b/packages/components/src/components/form/bal-datepicker/bal-datepicker.sass
@@ -58,7 +58,7 @@
         margin-bottom: 0
 
   +element(header)
-    display: table-header-group
+    display: block
     max-width: 360px
     margin: 0 auto 0 auto
     .bal-datepicker-grid__cell
